# Task-2.1

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  sin.cpp  sin.h
src/tests/: CMakeLists.txt  tests.cpp
